--- a/src/project_notebook.ipynb
+++ b/src/project_notebook.ipynb
@@ -5,14 +5,7 @@
    "id": "22ff81e9",
    "metadata": {},
    "source": [
-    "# Did lyrics become more homogenous over time?\n",
-    "\n",
-    "**Progetto per il corso di Economia dei Network**\n",
-    "**Università di Cagliari**\n",
-    "\n",
-    "**Emanuele Porcu**\n",
-    "\n",
-    "e.porcu36@studenti.unica.it - porcu.emanuele@gmail.com"
+    "# Did lyrics become more homogenous over time?\n"
    ]
   },
   {
@@ -35,12 +28,7 @@
     "The underlying rationale is that if similar networks of co-occurring words are being adopted, such networks will be more similar to each other over time. \n",
     "Furthermore, the project aims at investigating whether different genres might show different behaviors given the nature more or less conservative of music genres (such as country or blues).\n",
     "\n",
-    "Additionally, in the last part of the project, I aim at assessing whether word similarity might have any economical impact. I test the potential relationship between lyrics similarity and songs popularity on the Spotify charts.\n",
-    "\n",
-    "\n",
-    "# Previous work\n",
-    "\n",
-    "The majority of studies focused on musical composition or on other aspects of mainstream lyrics rather than the homogeneity across lyrics. The most relevant studies directly tackling lyrics similarity [7, 4] investigated how complexity/simplicity and repetitiveness are distributed in mainstream lyrics. On the one hand, both studies suggest a certain trend toward repetitiveness through times and across genres. Lyrics complexity, on the other hand, resulted to be highly variable. None of the aforementioned studies adopted a network approach."
+    "Additionally, in the last part of the project, I aim at assessing whether word similarity might have any economical impact. I test the potential relationship between lyrics similarity and songs popularity on the Spotify charts."
    ]
   },
   {
@@ -1551,8 +1539,7 @@
    },
    "outputs": [],
    "source": [
-    "base_dir = \"~/Documents/esami/economia_networks/project/dataset/archive/\"\n",
-    "spotify_df = pd.read_csv(join(base_dir, \"Spotify_final_dataset.csv\"))\n",
+    "spotify_df = pd.read_csv(\"Spotify_final_dataset.csv\")\n",
     "\n",
     "# rename columns as in the other dataframe\n",
     "spotify_df.rename(columns={\"Artist Name\": \"artist_name\", \"Song Name\": \"track_name\"}, inplace=True)\n",
@@ -1992,7 +1979,7 @@
    "source": [
     "# Discussion\n",
     "\n",
-    "The project aimed at investigating whether lyrics in mainstream music have become more similar over time and whether such phenomenon, if present, plays role in songs' popularity on Spotify.\n",
+    "The project aimed at investigating whether lyrics in mainstream music have become more similar over time and whether such a phenomenon, if present, plays any role in songs' popularity on Spotify.\n",
     "As highlighted in the previous paragraphs, I was able to identify a significant increase in similarity only in pop music between 1994 and 2016. However, no other genres showed such stable patterns.\n",
     "\n",
     "The lack of other similar patterns and the huge fluctuation in all time series does not allow a univocal interpretation of the results.\n",
